Fix junk border and masterwork overlapping

--- a/style/component/inventory/Item.scss
+++ b/style/component/inventory/Item.scss
@@ -89,7 +89,7 @@
 		background-size: 300% 100%;
 		background-position: center;
 		
-		.item-deepsight ~ & {
+		.item-deepsight ~ &, &-shifted-due-to-junk-border {
 			inset: 2px;
 		}
 		
@@ -183,10 +183,14 @@
 			border-bottom: calc(var(--slot-size) * .45) solid color(wishlist-tooltip-border);
 			border-right: calc(var(--slot-size) * .45) solid transparent;
 		}
-						
+
 		&-no-match {
 			box-shadow: inset 0 0 0 2px color(wishlist-tooltip-border-no-match),
 						inset 0 0 0 4px color(wishlist-tooltip-border-no-match, .5);
+						
+			.item-masterwork ~ & {
+				box-shadow: inset 0 0 0 2px color(wishlist-tooltip-border-no-match);
+			}
 					
 			> * {
 				@include icon(url("/image/svg/delete.svg"), color(background-3));
